--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="destination" id="trieste">
                 <h2>Trieste</h2>
             </div>
+
+            <div class="destination" id="ljubljana">
+                <h2>Ljubljana</h2>
+            </div>
         </div>
     </div>
 
