Add destination Bressanone

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <div class="destination" id="ljubljana">
                 <h2>Ljubljana</h2>
             </div>
+
+            <div class="destination" id="bressanone">
+                <h2>Bressanone</h2>
+            </div>
         </div>
     </div>
 
